maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:49: error: not found: value min4
  var pluspetit=min4(haut,gauche,droite,bas)
                ^